# Multimodal-RAG-Pipeline-Text-Img

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  debug_ingest.py  docker-compose.yml  evaluation.ipynb  main.py  plan.md  pyproject.toml  requirements.txt  submission.yml  task-requirements.txt  test_results.txt
sample_documents/: Word2Vec – Efficient Estimation of Word Representations in Vector Space – Mikolov et al. (2013)-Feedforward neural net language model.txt
src/api/: main.py
src/embeddings/: model_loader.py
src/generation/: generator.py
src/ingestion/: document_parser.py  image_processor.py
src/retrieval/: retriever.py
src/vector_store/: chroma_manager.py
tests/: manual_stress_test.py  test_edge_cases.py  test_integrated.py  test_submission.py  test_units.py
